--- a/my-app/templates/public/usuarios/generar_clave.html
+++ b/my-app/templates/public/usuarios/generar_clave.html
@@ -28,7 +28,7 @@
           <img
             class="logo"
             style="display: flex"
-            src="{{ url_for('static', filename ='./assets/img/logo.png') }}"
+            src="{{ url_for('static', filename ='./assets/img/avatar.png') }}"
             alt="Logo"
           />
         </span>
