--- a/my-app/templates/public/usuarios/lista_usuarios.html
+++ b/my-app/templates/public/usuarios/lista_usuarios.html
@@ -25,6 +25,7 @@
             <th>Nombre</th>
             <th>Área</th>
             <th>Rol</th>
+            <th>estado_civil</th>
             <th>Acciones</th>
           </tr>
         </thead>
