--- a/my-app/templates/public/base_cpanel.html
+++ b/my-app/templates/public/base_cpanel.html
@@ -27,7 +27,7 @@
 
               {% if dataLogin.rol == 1 %}
               <div>
-                <h1>BIENVENIDO ADMINISTRADOR</h1>
+                <h1>BIENVENIDO ADMINISTRADOR MARIA CANGO</h1>
               </div>
               {% endif %}
               {% if dataLogin.rol == 2 %}
