--- a/my-app/templates/public/login/auth_login.html
+++ b/my-app/templates/public/login/auth_login.html
@@ -8,7 +8,7 @@
               <img
                 class="logo"
                 style="display: flex"
-                src="{{ url_for('static', filename ='./assets/img/logo.png') }}"
+                src="{{ url_for('static', filename ='./assets/img/logo.jpg') }}"
                 alt="Logo" />
             </span>
           </div>
