--- a/my-app/templates/public/login/auth_register.html
+++ b/my-app/templates/public/login/auth_register.html
@@ -54,6 +54,17 @@
                   required
                   autofocus />
               </div>
+              <div class="mb-3 col-md-6">
+                <label for="name_surname" class="form-label">
+                  estado_civil
+                </label>
+                <input
+                  type="text"
+                  class="form-control"
+                  name="estado_civil"
+                  required
+                  autofocus />
+              </div>
 
             </div>
             
@@ -75,7 +86,7 @@
                 </select>
               </div>
             </div>
-
+            
             
             <div class="mb-3 form-password-toggle mt-3">
               <label class="form-label" for="pass_user">Clave</label>
